overlays/prod/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: zan
spec:
  ingressClassName: nginx
  rules:
  - host: auth.zanartcc.org
    http:
      paths:
      - backend:
          service:
            name: auth
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.zanartcc.org
    secretName: tls-auth-zanartcc-org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 https://auth.vzanartcc.net$request_uri;
  name: auth-old
  namespace: zan
spec:
  ingressClassName: nginx
  rules:
  - host: auth.vzanartcc.net
  tls:
  - hosts:
    - auth.vzanartcc.net
    secretName: tls-auth-vzanartcc-net
